--- a/fuzzy_remake_back/src/main/resources/application.yaml
+++ b/fuzzy_remake_back/src/main/resources/application.yaml
@@ -11,3 +11,15 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+
+  kafka:
+    consumer:
+      bootstrap-servers: localhost:9092
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+
+    producer:
+      bootstrap-servers: localhost:8098
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
