fix naming (result -> answers)

--- a/fuzzy_remake_back/src/main/resources/application.yaml
+++ b/fuzzy_remake_back/src/main/resources/application.yaml
@@ -17,7 +17,9 @@ spring:
       bootstrap-servers: localhost:9092
       auto-offset-reset: earliest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+    # todo fix later
+    # value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
 
     producer:
       bootstrap-servers: localhost:9092
